[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-priority"
version = "0.1.0"
description = "Priority-based execution for Behave BDD"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mathias Paulenko" },
]
keywords = ["behave", "bdd", "priority", "fail-fast", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "behave>=1.2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-priority"
Repository = "https://github.com/MathiasPaulenko/behave-priority"

[tool.hatch.build.targets.wheel]
packages = ["behave_priority"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "C4"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
